Troubleshooting global pass/fail QC column once more, with feeling.

--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -170,14 +170,14 @@ sumTab <- mutate(sumTab,
                  Global.QC = case_when(
                                        Depth.Post.Trim < depthAfterTrimThreshold ~ "Depth.Post.Trim", #"FAIL",
                                        `#FastQC.R1` < fastqcRawThreshold ~  "#FastQC.R1",#"FAIL",
-                                       `%Reads.Mapping.SC2` < perMappedReads ~ "FAIL",
-                                       ORFs.Passing.QC < numORFsThreshold ~ "FAIL",
-                                       Coverage.S < sGeneCovThreshold ~ "FAIL",
-                                       Pangolin == "None" ~ "FAIL",
-                                       Pangolin.QC == "fail" ~ "FAIL",
-                                       `%N` >= perNThreshold ~ "FAIL",
-                                       Percent.Ns.S >= perNThreshold ~ "FAIL",
-                                       Vadr.S.ORF.Shift != sGeneFrameshiftThreshold ~ "FAIL",
+                                       `%Reads.Mapping.SC2` < perMappedReads ~ "%Reads.Mapping.SC2",  #"FAIL",
+                                       ORFs.Passing.QC < numORFsThreshold ~ "ORFs.Passing.QC", #"FAIL",
+                                       Coverage.S < sGeneCovThreshold ~ "Coverage.S",  #"FAIL",
+                                       Pangolin == "None" ~ "Pangolin", #"FAIL",
+                                       Pangolin.QC == "fail" ~ "Pangolin.QC",  "FAIL",
+                                       `%N` >= perNThreshold ~ "%N",  #"FAIL",
+                                       Percent.Ns.S >= perNThreshold ~ "Percent.Ns.S",   "FAIL",
+                                       Vadr.S.ORF.Shift != sGeneFrameshiftThreshold ~ "Vadr.S.ORF.Shift", #"FAIL",
                                        TRUE ~ "pass"
                  )) %>%
           # mutate(Global.QC = cell_spec(Global.QC,
