Troubleshooting global pass/fail QC column again, checking data types.

--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -165,6 +165,8 @@ for (i in 1:colReps) {
             rename_with(colNamer, starts_with(paste0("V", i)))
 }
 
+print(typeof(sumTab$Depth.Post.Trim))
+
 # Add global QC column
 sumTab <- mutate(sumTab, 
                  Global.QC = case_when(
