Troubleshooting global pass/fail QC column again by pulling out hair slowly.

--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -168,7 +168,7 @@ for (i in 1:colReps) {
 # Add global QC column
 sumTab <- mutate(sumTab, 
                  Global.QC = case_when(
-                                       as.numeric(Depth.Post.Trim) < depthAfterTrimThreshold ~ "Depth.Post.Trim", #"FAIL",
+                                       Depth.Post.Trim < depthAfterTrimThreshold ~ "FAIL",
                                        `#FastQC.R1` < fastqcRawThreshold ~  "#FastQC.R1",#"FAIL",
                                        `%Reads.Mapping.SC2` < perMappedReads ~ "%Reads.Mapping.SC2",  #"FAIL",
                                        ORFs.Passing.QC < numORFsThreshold ~ "ORFs.Passing.QC", #"FAIL",
