--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -165,25 +165,25 @@ for (i in 1:colReps) {
             rename_with(colNamer, starts_with(paste0("V", i)))
 }
 
-# Add global QC column
-sumTab <- mutate(sumTab, 
-                 Global.QC = case_when(
-                                       Depth.Post.Trim < 100 ~ "FAIL",
-                                       `#FastQC.R1` < fastqcRawThreshold ~  "#FastQC.R1",#"FAIL",
-                                       `%Reads.Mapping.SC2` < perMappedReads ~ "%Reads.Mapping.SC2",  #"FAIL",
-                                       ORFs.Passing.QC < numORFsThreshold ~ "ORFs.Passing.QC", #"FAIL",
-                                       Coverage.S < sGeneCovThreshold ~ "Coverage.S",  #"FAIL",
-                                       Pangolin == "None" ~ "Pangolin", #"FAIL",
-                                       Pangolin.QC == "fail" ~ "Pangolin.QC",  "FAIL",
-                                       `%N` >= perNThreshold ~ "%N",  #"FAIL",
-                                       Percent.Ns.S >= perNThreshold ~ "Percent.Ns.S",   "FAIL",
-                                       Vadr.S.ORF.Shift != sGeneFrameshiftThreshold ~ "Vadr.S.ORF.Shift", #"FAIL",
-                                       TRUE ~ "pass"
-                 )) %>%
-          # mutate(Global.QC = cell_spec(Global.QC,
-          #                              color = ifelse(Global.QC == "FAIL", "red", "black"), 
-          #                              bold = ifelse(Global.QC == "FAIL", T, F))) %>%
-          relocate(Global.QC)
+# # Add global QC column
+# sumTab <- mutate(sumTab, 
+#                  Global.QC = case_when(
+#                                        Depth.Post.Trim < 100 ~ "FAIL",
+#                                        `#FastQC.R1` < fastqcRawThreshold ~  "#FastQC.R1",#"FAIL",
+#                                        `%Reads.Mapping.SC2` < perMappedReads ~ "%Reads.Mapping.SC2",  #"FAIL",
+#                                        ORFs.Passing.QC < numORFsThreshold ~ "ORFs.Passing.QC", #"FAIL",
+#                                        Coverage.S < sGeneCovThreshold ~ "Coverage.S",  #"FAIL",
+#                                        Pangolin == "None" ~ "Pangolin", #"FAIL",
+#                                        Pangolin.QC == "fail" ~ "Pangolin.QC",  "FAIL",
+#                                        `%N` >= perNThreshold ~ "%N",  #"FAIL",
+#                                        Percent.Ns.S >= perNThreshold ~ "Percent.Ns.S",   "FAIL",
+#                                        Vadr.S.ORF.Shift != sGeneFrameshiftThreshold ~ "Vadr.S.ORF.Shift", #"FAIL",
+#                                        TRUE ~ "pass"
+#                  )) %>%
+#           # mutate(Global.QC = cell_spec(Global.QC,
+#           #                              color = ifelse(Global.QC == "FAIL", "red", "black"), 
+#           #                              bold = ifelse(Global.QC == "FAIL", T, F))) %>%
+#           relocate(Global.QC)
 ```
 
 ```{r display-sum, echo=FALSE}
