--- a/Cecret/bin/report/runInfo.Rmd
+++ b/Cecret/bin/report/runInfo.Rmd
@@ -16,7 +16,7 @@ library(DT)
 
 ```{r ss_parsing, include=FALSE}
 # SampleSheet.csv parsing; dealing with the different formats is a bit dicey. May need to revisit.
-lineStorage <- readLines(paste(params$seqDirFP, "SampleSheet.csv", sep = "/"), n = 30)
+lineStorage <- readLines(file.path(params$seqDirFP, "SampleSheet.csv"), n = 30)
 for (l in 1:length(lineStorage)) {
   if (str_detect(lineStorage[l], "\\[Header\\]")) {
     ssHeader <- list(expName = str_split(lineStorage[l + 2], ",")[[1]][2],
@@ -35,9 +35,8 @@ for (l in 1:length(lineStorage)) {
 ```
 
 ```{r run_info, include=FALSE}
-sampleInfo <- read_csv(paste(params$seqDirFP, 
-                             "SampleSheet.csv", 
-                             sep = "/"), 
+sampleInfo <- read_csv(file.path(params$seqDirFP, 
+                             "SampleSheet.csv"), 
                        skip = dataStartsLine, 
                        skip_empty_rows = TRUE) # skip_empty_rows not working as expected
 sampleInfo <- filter(sampleInfo, Sample_ID != "")
