--- a/Cecret/bin/report/sGene.Rmd
+++ b/Cecret/bin/report/sGene.Rmd
@@ -8,6 +8,8 @@ params:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+# Note that Rmd files use the location of the Rmd file as their working directory during knitting. This causes problems when trying to unambiguously locate external dependencies that aren't in the same directory. Setting working directory below to address.
+knitr::opts_knit$set(root.dir = params$analysisDirFP)
 ```
 
 ```{r index-comments, include=FALSE, eval=FALSE}
