Updating summary.txt column name.

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -95,7 +95,7 @@ sumTab <- select(sumTab,
                  Length.Longest.Insert = len_largest_insertion, 
                  Length.Longest.Del = len_largest_deletion,
                  pangoLEARN.v = pangoLEARN_version,
-                 `#Lineage.Subs` = pangolin_subs,
+                 `#Lineage.Subs` = pangolin_substitutions,
                  `GenBank#`,
                  ORFs.Passing.QC,
                  Coverage.S,
