--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -116,7 +116,7 @@ sumTab <- select(sumTab,
                  Coverage.S, 
                  Pangolin = pangolin_lineage, 
                  Pangolin.QC = pangolin_status, 
-                 `#Lineage.Subs` = pangolin_subs, 
+                 `#Lineage.Subs` = pangolin_substitutions, 
                  pangoLEARN.v = pangoLEARN_version, 
                  `GenBank#`, 
                  `%N` = `%_N`, 
