--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -21,9 +21,10 @@ header-includes:
 - \fancyhf{}
 - \setlength{\headheight}{23pt}
 - \chead{\textbf{Enteric Diseases Laboratory Branch SARS-CoV-2 Variant Whole Genome Sequencing Run Summary}}
-- \cfoot{\textbf{Ver. No.}01}
+- \rhead{\thepage}
+- \cfoot{\textbf{Ver. No.}02}
 - \lfoot{\textbf{Doc. No.} EDLB.TE.C.032.F02}
-- \rfoot{\textbf{Effective Date:}TBD}
+- \rfoot{\textbf{Effective Date:} 05/13/2021}
 classoption:
   - landscape
 params:
