Modifying R scripts to accept bed files as explicit args without defaults. Move and rename bed files in configs directory. Removing bed files from R Singularity def file.

--- a/Cecret/bin/report/ampliconCov.Rmd
+++ b/Cecret/bin/report/ampliconCov.Rmd
@@ -6,7 +6,7 @@ params:
   seqDirFP: null
   pacbamDir: "pacbam"
   pacbamFileSuffix: ".primertrim.sorted.pileup"
-  ampBED: "/opt/nCoV-2019.insert.bed"
+  ampBED: null
   ampMinCov: 30
   ampMeanCov: 100
   ampMaxNFail: 5
